SERVER-48471 Hashed indexes may be incorrectly marked multikey and be ineligible as a shard key

(cherry picked from commit 8fa255bc05cd99ff649bd0ef9407417b7e439b5e)